# pythonProject7

./: .coverage  README.md  pyproject.toml
scr/: main.py  utils.py
tests/: test_utils.py
utils/: services.py
