[tool.poetry]
name = "courses-3"
version = "0.1.0"
description = ""
authors = ["Denis Korochkov <denis30510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
function = "^1.2.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
